agregar fotos y link volver

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coop-Virtual</title>
     <link rel="stylesheet" href="index.css">
+    
 </head>
 <body>
     <header>
@@ -19,14 +20,15 @@
 
     <section id="inicio">
         <h1>Cooperativa escolar <br>"El Progreso"</h1>
-        <form action="https://www.instagram.com/">
+        
         <button>Conoce más</button>
     </form>
     </section>
 
         <section id="info">
             <div class="container">
-            <h2>¿Cómo nació la<span class="color-acento">Cooperativa?</span></h2>
+            <h2>¿Cómo nació la <span class="color-acento">Cooperativa?</span></h2>
+            <a href="pages/creacion.html">creación</a>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, facilis, quae unde vero ratione ullam error quam est, nisi saepe laborum? Odit ipsum reiciendis asperiores dicta laborum explicabo nisi dolores!Lorem</p>
         </div>
 
@@ -36,6 +38,7 @@
             <h2>Departamentos</h2>
             <div class="carta">
                 <h3>Comunicación y Difusión</h3>
+                <a href="pages/departamentos.html">departamentos</a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam iure, debitis, animi voluptate sint iste natus inventore qui cupiditate adipisci perferendis, sapiente a. Expedita dolor ut quia quidem sit dolorum!</p>
                 <button>+info</button>
             </div>
@@ -51,11 +54,19 @@
             </div>
             <div class="carta">
                 <h3>Asociados</h3>
+                <a href="pages/Proyectos.html">Proyectos</a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam iure, debitis, animi voluptate sint iste natus inventore qui cupiditate adipisci perferendis, sapiente a. Expedita dolor ut quia quidem sit dolorum!</p>
                 <button>+info</button>
             </div>
             <div class="carta">
                 <h3>Cultura</h3>
+                <a href="pages/consejo.html">consejo</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam iure, debitis, animi voluptate sint iste natus inventore qui cupiditate adipisci perferendis, sapiente a. Expedita dolor ut quia quidem sit dolorum!</p>
+                <button>+info</button>
+            </div>
+            <div class="carta">
+                <h3>Asamblea</h3>
+                <a href="pages/asamblea.html">Asamblea</a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam iure, debitis, animi voluptate sint iste natus inventore qui cupiditate adipisci perferendis, sapiente a. Expedita dolor ut quia quidem sit dolorum!</p>
                 <button>+info</button>
             </div>
