--- a/pages/Proyectos.html
+++ b/pages/Proyectos.html
@@ -20,7 +20,7 @@ Depto. De administración: Realizaron una charla sobre el bullyng.
 
 Depto. de acción social: Realizaron actividades de recreación un día antes de las vacaciones de invierno y durante el año realizan copias solidarias, y para toda la institución con un precio mínimo  
 
- 
+ <p><a href="../index.html">volver</a></p>
 
  
 
