--- a/pages/asamblea.html
+++ b/pages/asamblea.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Asamblea</title>
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <h1>Asambleas</h1>
@@ -13,5 +14,12 @@
         cierre del ejercicio social y antes de la finalización del año lectivo.</p>
         <p>Las asambleas deben convocarse con 15 dias de anticipación y para que estas sean celebradas debe encontrarse la mitad más uno de los asociados.
         </p>
-</body>
+        <a href="../index.html">volver</a>
+        <h2>ASAMBLEA 2019</h2>
+        <img class="fotog" src="../img/asamblea 2019.jpeg">
+        <h2>ASAMBLEA 2020</h2>
+        <IMG class="fotog" src="../img/asamblea 2020.jpeg"></IMG>
+<h2>ASAMBLEA 2021</h2>
+        <img class="fotog" src="../img/asamblea 2021.jpeg">
+    </body>
 </html>
