--- a/pages/consejo.html
+++ b/pages/consejo.html
@@ -26,6 +26,6 @@
 <p>9) VOCAL SUPLENTE V: Borges, Pia</p>
 <p>10) SINDICO: Castellano, Abigail</p>
 <p>11) SINDICO SUPLENTE:</p>
-
+<a href="../index.html">volver</a>
 </body>
 </html>
