--- a/pages/departamentos.html
+++ b/pages/departamentos.html
@@ -13,4 +13,5 @@
     Depto. de cultura: Es el encargado de organizar actividades, relacionadas con el arte, como lo son: La música, pintura, fotografía, manualidades, dibujos y canto 
     Depto. de comunicación y difusión:  Es el encargado de publicar las actividades de la cooperativa por medio de las redes sociales, y el encargado de realizar y actualizar la página web.   
 </body>
+<a href="../index.html">volver</a>
 </html>
