--- a/pages/asamblea.html
+++ b/pages/asamblea.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asamblea</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <title>Document</title>
 </head>
 <body>
     <h1>Asambleas</h1>
     Existen dos tipos de Asambleas las ordinarias y extraordinarias, estas son de carácter legal igual que las decisiones que
     serán tomadas en ella.
-    <p>Las Asambleas Ordinarias se realizan una vez por año, dentro de los treinta días siguientes a la fecha de
-        cierre del ejercicio social y antes de la finalización del año lectivo.</p>
-        <p>Las asambleas deben convocarse con 15 dias de anticipación y para que estas sean celebradas debe encontrarse la mitad más uno de los asociados.
-        </p>
-        <a href="../index.html">volver</a>
-        <h2>ASAMBLEA 2019</h2>
-        <img class="fotog" src="../img/asamblea 2019.jpeg">
-        <h2>ASAMBLEA 2020</h2>
-        <IMG class="fotog" src="../img/asamblea 2020.jpeg"></IMG>
-<h2>ASAMBLEA 2021</h2>
-        <img class="fotog" src="../img/asamblea 2021.jpeg">
-    </body>
+    <p>Las asambleas deben convocarse con 15 dias de anticipación y para que estas sean celebradas debe encontrarse la mitad más uno de los asociados.
+    <h2>Asamblea Ordinaria</h2>
+        <p>La Asamblea Ordinaria se realiza una vez por año, dentro de los treinta días siguientes a la fecha de
+        cierre del ejercicio social y antes de la finalización del año lectivo. En estas se tratan los siguientes puntos: </p>
+        <p>Memoria, Balance General, Estado de Resultados y demás Cuadros Anexos, de realizar estos informes se encarga el Dpto. de Administración, Proyecto de Distribución de Excedentes e Informes del Sindico.</p>
+       <p>Se elije el nuevo Consejo de Administración, mediante el voto electronico. Para votar los asociados deben tener las cuotas al día y tienen un unico voto por asosiado.</p>
+       <p>Una vez presentes la mitad más uno del total de los asociados se da comienzo a la asamblea y al inicio de esta se designa a dos asosiados presentes para firmar el acta junto a el Presidente y el Secretario.</p>
+       <h2>Asamblea Extrordinaria</h2>
+       <p>En este tipo de asamble se trata cualquier tema que inquiete a los asosiados. También cuando los Departamentos tienen problemas internos que entre sus integrantes o su jefe no pueden resolver se puede hablar e intentar resolver con el Consejo de Administración</p>
+       <p>Quien se encarga de saber que temas inquieta a los departamentos es el Secretario que escribirá estos y los comunicará cuando inicie la asamblea</p>
+       <h3>¿Quiénes convocan las Asamblea Extraordinarias?</h2>
+       <p>Estas pueden ser convocadas por el Consejo de Administración, Sindico, Comisión Asesora o los asosiados que superen el 10% y la pidan por escrito.</p>
+       
+    </p>
+</body>
 </html>
