--- a/pages/Proyectos.html
+++ b/pages/Proyectos.html
@@ -8,17 +8,17 @@
 <body>
     PROYECTOS  2023 
 
-Depto. De comunicación y difusión: Se llevo a cabo un grupo de difusión en la plataforma Instagram con novedades sobre la cooperativa y diferentes departamentos. Y la realización de una página web. 
+<p>Depto. De comunicación y difusión: Se llevo a cabo un grupo de difusión en la plataforma Instagram con novedades sobre la cooperativa y diferentes departamentos. Y la realización de una página web en la que se informe sobre la Cooperativa en sus años anteriores y la actualidad (2023). </p>
 
-Depto. de deportes: Realizaron torneos de vóley y futbol, terminados exitosamente y con un buen recibimiento por parte de los alumnos. 
+<p>Depto. de deportes: Realizaron torneos de vóley y futbol, en el que todos los alumnos de la E.E.S N°3 "Mariano Moreno" podian inscribirse, siendo socios recivian el beneficio de inscripción gratuita y los no socios pagando un valor minimo.</p>
 
-Depto. De cultura: Se realizo una charla sobre la TCA, Próximamente pintaran el cajón de sonido. 
+<p>Depto. De cultura: Se realizo una charla sobre los TCA con los profesionales de la salud Loana Bormida, Uriel Wilwert y Patricia Palacio, terminada con un buen recivimiento por todos los alumnos. Pintaron el cajón de sonido, para algo. </p>
 
-Depto. De asociados: llevo a cabo el cinecoop de la cooperativa. 
+<p>Depto. De asociados: Llevo a cabo el cinecoop de la cooperativa abierto a la comunidad con liosco incluido. En Octubre iniciaron su proyecto con 5to año con el objetivo de informar a los alumnos de este año como es el trabajo de un integrande activo de la cooperativa. </p>
 
-Depto. De administración: Realizaron una charla sobre el bullyng. 
+<p>Depto. De administración: Realizaron una charla sobre el bullyng.</p> 
 
-Depto. de acción social: Realizaron actividades de recreación un día antes de las vacaciones de invierno y durante el año realizan copias solidarias, y para toda la institución con un precio mínimo  
+<p>Depto. de acción social: Realizaron actividades de recreación un día antes de las vacaciones de invierno y durante el año realizan copias solidarias, y para toda la institución con un precio mínimo</p>  
 
  <p><a href="../index.html">volver</a></p>
 
