--- a/pages/consejo.html
+++ b/pages/consejo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Consejo</title>
 </head>
 <body>
     <h1>Consejo de Administración</h1>
@@ -13,7 +13,7 @@
     <p>Los consejeros titulares electos, se distribuirán en la primera sesión del Consejo de Administración
         los siguientes cargos: un Presidente, un Vicepresidente, un Secretario, un Tesorero, un Síndico, un
         Síndico suplente, Tres vocales y tres vocales suplentes.</p>
-        <p>El Consejo y sus integrantes deben cumplir con deberes y obligaciones que se encuentran explicadas en el Estatuto</p>
+        <p>El Consejo y sus integrantes deben cumplir con deberes y obligaciones que se encuentran explicadas en el <a href="../img/Estatuto Cooperativa .pdf" target="_blank">Estatuto</a></p>
  <h2>Integrantes del Consejo de Administracion 2023:</h2> 
 <p>1) PRESIDENTE: Retegui, Marco</p>
 <p>2) VICEPRESIDENTE: Alvarez, Maite</p>
