--- a/pages/departamentos.html
+++ b/pages/departamentos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Departamentos</title>
 </head>
 <body>
     Depto. de administración: Se encarga de la administración como los libros diarios, Libros mayores el estado de resultado y el estado de situación patrimonial. También se encarga de la organización de las órdenes de compra, los documentos comerciales y de su archivo. 
