--- a/pages/creacion.html
+++ b/pages/creacion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Creación</title>
 </head>
 <body>
     <h1>Creación de la Coperativa</h1>
