--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="container">
             <p class="logo">Coop-Virtual</p>
             <nav>
-                <a href= "#departamentos">Departamentos</a>
-                <a href= "#quienes-somos">Quienes Somos</a>
-                <a href= "#valores">Valores</a>
+                <a href= "pages/departamentos.html">Departamentos</a>
+                <a href= "pages/creacion.html">Quienes Somos</a>
+                <a href= "pages/valores.html">Valores</a>
             </nav>
         </div>
     </header>
