--- a/pages/creacion.html
+++ b/pages/creacion.html
@@ -18,6 +18,7 @@ En el año 2017 tras el arduo trabajo de fomentar en los alumnos actitudes coope
     fotocopiadoras, gazebo, heladera, horno eléctrico, elementos para realizar
     diversos deportes y material para construcción de un aula exclusiva para la
     Cooperativa denominada “Coopaula”.</p>
+    <img src="../img/coopaula inicio.jpeg" alt="">
     actualmente la cantidad de asociados es 169
     <a href="../index.html">volver</a>
 </body>
