--- a/pages/departamentos.html
+++ b/pages/departamentos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Departamentos</title>
+    <link rel="shortcut icon" href="../img/Consejo.jpg" type="image/x-icon">
 </head>
 <body>
     Depto. de administración: Se encarga de la administración como los libros diarios, Libros mayores el estado de resultado y el estado de situación patrimonial. También se encarga de la organización de las órdenes de compra, los documentos comerciales y de su archivo. 
