--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="img/logo.jpeg" alt="" height="200" >
         <div class="container">
             <p class="logo">Coop-Virtual</p>
             <nav>
