footer con logos y colores

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coop-Virtual</title>
-    <link rel="stylesheet" href="index.css">
-    
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="shortcut icon" href="img/logo.jpeg" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
             </nav>
         </div>
     </header>
-
+<aside><img src="../cooperativa/img/recreación 1.jpeg" alt="" width="200" srcset=""></aside>
     <section id="inicio">
         <h1>Cooperativa escolar <br>"El Progreso"</h1>
     </form>
@@ -67,6 +67,9 @@
 <footer>
     <div class="container">
     <p>&copy; Cooperativa Escolar "El Progreso" 2023</p>
+<a  href="https://www.instagram.com/coop.escolar.el.progreso/" target="_blank"><img src="img/instagram.webp" alt="" height="75"></a>
+<a href="https://www.facebook.com/people/Cooperativa-Escolar-El-Progreso/100066414342905/"target="_blank"><img src="img/facebook.png" alt="" height="75"></a>
+<a href="#"><img src="img/whatsapp .jpg" alt="" height="75"></a>
 </div>
 </footer>
 </body>
