--- a/pages/asamblea.html
+++ b/pages/asamblea.html
@@ -21,7 +21,12 @@
        <p>Quien se encarga de saber que temas inquieta a los departamentos es el Secretario que escribirá estos y los comunicará cuando inicie la asamblea</p>
        <h3>¿Quiénes convocan las Asamblea Extraordinarias?</h2>
        <p>Estas pueden ser convocadas por el Consejo de Administración, Sindico, Comisión Asesora o los asosiados que superen el 10% y la pidan por escrito.</p>
-       
+      <h2>Asamble 2018</h2>
+       <img src="../img/asamblea 2018.jpeg" alt="">
+       <h2>Asamblea 2020</h2>
+       <img src="../img/asamblea 2020.jpeg" alt="">
+       <h2>Asamblea 2021</h2>
+  <img src="../img/asamblea 2021.jpeg" alt="">
     </p>
 </body>
 </html>
