--- a/pages/creacion.html
+++ b/pages/creacion.html
@@ -19,7 +19,8 @@ En el año 2017 tras el arduo trabajo de fomentar en los alumnos actitudes coope
     diversos deportes y material para construcción de un aula exclusiva para la
     Cooperativa denominada “Coopaula”.</p>
     <img src="../img/coopaula inicio.jpeg" alt="">
-    actualmente la cantidad de asociados es 169
+    <img src="../img/coopA3.jpeg" alt="">
+    Actualmente la cantidad de asociados es 169.
     <a href="../index.html">volver</a>
 </body>
 </html>
