--- a/pages/departamentos.html
+++ b/pages/departamentos.html
@@ -7,12 +7,12 @@
     <link rel="shortcut icon" href="../img/Consejo.jpg" type="image/x-icon">
 </head>
 <body>
-    Depto. de administración: Se encarga de la administración como los libros diarios, Libros mayores el estado de resultado y el estado de situación patrimonial. También se encarga de la organización de las órdenes de compra, los documentos comerciales y de su archivo. 
-    Depto. de asociados: es el encargado de asociar a los alumnos de la institución a la cooperativa escolar “El progreso”, de cobrar todos los meses las cuotas sociales, controlar y planificar las asambleas. 
-    Depto. de acción social: este departamento se va a encargar de ayudar a las personas que están en situaciones problemáticas y a poder concientizar a los alumnos sobre las realidades que vivimos dentro de la sociedad. Se encarga de realizar las fotocopias de la cooperativa, donde imprimen documentos solicitados por los alumnos, profesores e integrantes de la institución. 
-    Depto. de deportes: Se encarga de la realización de eventos deportivos, culturales y educativos. Lleva a cabo proyectos que consideran realizar torneos mensuales de futbol y de vóley, dirigidos por los participantes de este departamento.  
-    Depto. de cultura: Es el encargado de organizar actividades, relacionadas con el arte, como lo son: La música, pintura, fotografía, manualidades, dibujos y canto 
-    Depto. de comunicación y difusión:  Es el encargado de publicar las actividades de la cooperativa por medio de las redes sociales, y el encargado de realizar y actualizar la página web.   
+   <p>Depto. de Administración: Se encarga de la administración como los libros diarios, Libros mayores el estado de resultado y el estado de situación patrimonial. También se encarga de la organización de las órdenes de compra, los documentos comerciales y de su archivo.</p>  
+   <p>Depto. de Asociados: es el encargado de asociar a los alumnos de la institución a la cooperativa escolar “El progreso”, de cobrar todos los meses las cuotas sociales, controlar y planificar las asambleas. </p> 
+    <p>Depto. de Acción Social: este departamento se va a encargar de ayudar a las personas que están en situaciones problemáticas y a poder concientizar a los alumnos sobre las realidades que vivimos dentro de la sociedad. Se encarga de realizar las fotocopias de la cooperativa, donde imprimen documentos solicitados por los alumnos, profesores e integrantes de la institución. </p>
+    <p>Depto. de Deportes: Se encarga de la realización de eventos deportivos, culturales y educativos. Lleva a cabo proyectos que consideran realizar torneos mensuales de futbol y de vóley, dirigidos por los participantes de este departamento.  </p>
+    <p>Depto. de Cultura: Es el encargado de organizar actividades, relacionadas con el arte, como lo son: La música, pintura, fotografía, manualidades, dibujos y canto </p>
+    <p>Depto. de Comunicación y Difusión:  Es el encargado de publicar las actividades de la cooperativa por medio de las redes sociales, y el encargado de realizar y actualizar la página web.</p>   
 </body>
 <a href="../index.html">volver</a>
 </html>
