--- a/pages/valores.html
+++ b/pages/valores.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valores</title>
 </head>
 <body>
+    <img src="../img/valores.jpeg" alt="" width="900">
+
     <a href="../index.html">volver</a>   
 </body>
 </html>
