--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p class="logo">Coop-Virtual</p>
             <nav>
                 <a class=rojo1 href= "pages/departamentos.html">Departamentos</a>
-                <a class=violeta1 href= "pages/creacion.html">Quienes Somos</a>
+                <a class=celeste1 href= "pages/creacion.html">Quienes Somos</a>
                 <a class=verde1 href= "pages/valores.html">Valores</a>
                 <a class=amarillo1 href= "pages/Proyectos.html">Proyectos 2023</a>
                 <a class=naranja1 href= "pages/asamblea.html">Asambleas</a>
@@ -25,17 +25,17 @@
             </nav>
         </div>
     </header>
-<aside><img src="../cooperativa/img/recreación 1.jpeg" alt="" width="200" srcset=""></aside>
+   
 <main>   
 <section id="inicio">
-        <h1>Cooperativa escolar <br>"El Progreso"</h1>
+        <h1>Cooperativa escolar <br> <span class="color-acento">"El Progreso"</span></h1>
 
     </section>
 
-        <section id="info" class="violeta cajag">
+        <section id="info" class="celeste cajag">
             <div class="container">
-            <h2>¿Cómo nació la <span class="color-acento">Cooperativa?</span></h2>
-            <a href="pages/creacion.html">creación</a>
+            <h2>¿Cómo nació la Cooperativa?</h2>
+            <a href="pages/creacion.html">Creación</a>
         </div>
 
         </section>
@@ -43,7 +43,7 @@
         <section id="info" class="rojo cajag">
         <div class="container">
         <h2>Departamentos</h2>
-        <a href="pages/departamentos.html">departamentos</a>
+        <a href="pages/departamentos.html">Departamentos</a>
         </div>
     </section>
 
@@ -58,7 +58,7 @@
         <section id= "info" class="azul cajag">
             <div class="container">
                 <h2>Consejo 2023</h2>
-                <a href="pages/consejo.html">consejo</a>
+                <a href="pages/consejo.html">Consejo</a>
              
             </div>
         </section>
