--- a/pages/Proyectos.html
+++ b/pages/Proyectos.html
@@ -6,26 +6,47 @@
     <title>Proyectos</title>
 </head>
 <body>
+    <header>
+       
+        <div class="container">
+        <img src="img/banner.jpeg" alt="" height="" width="800">
+            <p class="logo">Coop-Virtual</p>
+            <nav>
+                <a class=rojo1 href= "pages/departamentos.html">Departamentos</a>
+                <a class=violeta1 href= "pages/creacion.html">Quienes Somos</a>
+                <a class=verde1 href= "pages/valores.html">Valores</a>
+                <a class=amarillo1 href= "pages/Proyectos.html">Proyectos 2023</a>
+                <a class=naranja1 href= "pages/asamblea.html">Asambleas</a>
+                <a class=azul1 href= "pages/consejo.html">Consejo de Administración</a>
+            </nav>
+        </div>
+    </header>
+
     PROYECTOS  2023 
 
-<p>Depto. De comunicación y difusión: Se llevo a cabo un grupo de difusión en la plataforma Instagram con novedades sobre la cooperativa y diferentes departamentos. Y la realización de una página web en la que se informe sobre la Cooperativa en sus años anteriores y la actualidad (2023). </p>
+<p>Depto. de Comunicación y Difusión: Se llevo a cabo un grupo de difusión en la plataforma Instagram con novedades sobre la cooperativa y diferentes departamentos. Y la realización de una página web en la que se informe sobre la Cooperativa en sus años anteriores y la actualidad (2023). </p>
 
-<p>Depto. de deportes: Realizaron torneos de vóley y futbol, en el que todos los alumnos de la E.E.S N°3 "Mariano Moreno" podian inscribirse, siendo socios recibían el beneficio de inscripción gratuita y los no socios pagando un valor minimo.</p>
+<p>Depto. de Deportes: Realizaron torneos de futbol y voley en los meses de mayo y septiembre respectivamente, en el que todos los alumnos de la E.E.S N°3 "Mariano Moreno" podian inscribirse, siendo socios recibían el beneficio de inscripción gratuita y los no socios pagando un valor minimo.</p>
 
-<p>Depto. De cultura: Se realizo una charla sobre los TCA con los profesionales de la salud Loana Bormida, Uriel Wilwert y Patricia Palacio, terminada con un buen recivimiento por todos los alumnos. Pintaron el cajón de sonido. </p>
+<p>Depto. de Cultura: En el mes de agosto se realizo una charla sobre los TCA con los profesionales de la salud Loana Bormida, Uriel Wilwert y Patricia Palacio, terminada con un buen recivimiento por todos los alumnos. Pintaron el cajón de sonido. </p>
 
-<p>Depto. De asociados: Llevo a cabo el cinecoop de la cooperativa abierto a la comunidad con kiosco incluido. En Octubre iniciaron su proyecto con 5to año con el objetivo de informar a los alumnos de este año como es el trabajo de un integrande activo de la cooperativa. </p>
+<p>Depto. de Asociados: En el mes de julio se llevo a cabo el Cinecoop de la cooperativa abierto a la comunidad con kiosco incluido. En Octubre iniciaron su proyecto con 5to año con el objetivo de informar a los alumnos como es el trabajo de un integrande activo de la cooperativa. </p>
 
-<p>Depto. De administración: Realizaron una charla de concientización sobre el bullying con diferente estaciones con juegos para que los alumnos pudieran interactuar y participar.</p> 
+<p>Depto. de Administración: Realizaron, en el mes de junio, una charla de concientización sobre el bullying con diferente estaciones con juegos para que los alumnos pudieran interactuar y participar.</p> 
 
-<p>Depto. de acción social: Realizaron actividades de recreación un día antes de las vacaciones de invierno y durante el año realizan copias solidarias para toda la institución con un precio mínimo o gratis si algún niño lo nesesita. En Octubre se organizó un encuentro con los abuelos de el hogar de ancianos "Horacio Carlos Koock" junto a los alumnos del C.E.C N°802, para compartir una mañana pintando mandalas, jugando a el truco, hablando con ellos y pedirles, si recordaban alguna receta, compartirnoslas para luego realizar un recetario.</p>  
+<p>Depto. de Acción Social: Realizaron actividades de recreación un día antes de las vacaciones de invierno y durante el año realizan copias solidarias para toda la institución con un precio mínimo o gratis si algún niño lo nesesita. En Octubre se organizó un encuentro con los abuelos de el hogar de ancianos "Horacio Carlos Koock" junto a los alumnos del C.E.C N°802, para compartir una mañana pintando mandalas, jugando a el truco, hablando con ellos y pedirles, si recordaban alguna receta, compartirnoslas para luego realizar un recetario.</p>  
 
  <p><a href="../index.html">volver</a></p>
 
- 
+ <footer>
+    <div class="container">
+    <p>&copy; Cooperativa Escolar "El Progreso" 2023</p>
+    <a  href="https://www.instagram.com/coop.escolar.el.progreso/" target="_blank"><img src="img/instagram.webp" alt="" height="75"></a>
+    <a href="https://www.facebook.com/people/Cooperativa-Escolar-El-Progreso/100066414342905/"target="_blank"><img src="img/facebook.png" alt="" height="75"></a>
+    <a href="#" target="_blank"><img src="img/whatsapp .jpg" alt="" height="75"></a>
 
- 
-
+</div>
+</footer>
  
 </body>
 </html>
