--- a/pages/consejo.html
+++ b/pages/consejo.html
@@ -7,11 +7,27 @@
     <link rel="shortcut icon" href="../img/Consejo.jpg" type="image/x-icon">
 </head>
 <body>
+    <header>
+       
+        <div class="container">
+        <img src="img/banner.jpeg" alt="" height="" width="800">
+            <p class="logo">Coop-Virtual</p>
+            <nav>
+                <a class=rojo1 href= "pages/departamentos.html">Departamentos</a>
+                <a class=violeta1 href= "pages/creacion.html">Quienes Somos</a>
+                <a class=verde1 href= "pages/valores.html">Valores</a>
+                <a class=amarillo1 href= "pages/Proyectos.html">Proyectos 2023</a>
+                <a class=naranja1 href= "pages/asamblea.html">Asambleas</a>
+                <a class=azul1 href= "pages/consejo.html">Consejo de Administración</a>
+            </nav>
+        </div>
+    </header>
+
     <h1>Consejo de Administración</h1>
     La Cooperativa está dirigida por el Consejo de Administración. Sus miembros son elegidos en la Asamblea mediante el voto virtual y secreto
     de los asociados. El escrutinio se hará inmediatamente después del acto eleccionario y se proclamará
     a los candidatos que hubieren obtenido mayoría de votos.
-    <p>Los consejeros titulares electos, se distribuirán en la primera sesión del Consejo de Administración
+    <p>Se distribuirán en la primera sesión del Consejo de Administración
         los siguientes cargos: un Presidente, un Vicepresidente, un Secretario, un Tesorero, un Síndico, un
         Síndico suplente, Tres vocales y tres vocales suplentes.</p>
         <p>El Consejo y sus integrantes deben cumplir con deberes y obligaciones que se encuentran explicadas en el <a href="../img/Estatuto Cooperativa .pdf" target="_blank">Estatuto</a></p>
@@ -27,6 +43,18 @@
 <p>9) VOCAL SUPLENTE V: Borges, Pia</p>
 <p>10) SINDICO: Castellano, Abigail</p>
 <p>11) SINDICO SUPLENTE:</p>
+
 <a href="../index.html">volver</a>
+
+<footer>
+    <div class="container">
+    <p>&copy; Cooperativa Escolar "El Progreso" 2023</p>
+    <a  href="https://www.instagram.com/coop.escolar.el.progreso/" target="_blank"><img src="img/instagram.webp" alt="" height="75"></a>
+    <a href="https://www.facebook.com/people/Cooperativa-Escolar-El-Progreso/100066414342905/"target="_blank"><img src="img/facebook.png" alt="" height="75"></a>
+    <a href="#" target="_blank"><img src="img/whatsapp .jpg" alt="" height="75"></a>
+
+</div>
+</footer>
+
 </body>
 </html>
