--- a/pages/valores.html
+++ b/pages/valores.html
@@ -6,8 +6,32 @@
     <title>Valores</title>
 </head>
 <body>
-    <img src="../img/valores.jpeg" alt="" width="900">
+    <header>
+       
+        <div class="container">
+        <img src="img/banner.jpeg" alt="" height="" width="800">
+            <p class="logo">Coop-Virtual</p>
+            <nav>
+                <a class=rojo1 href= "pages/departamentos.html">Departamentos</a>
+                <a class=violeta1 href= "pages/creacion.html">Quienes Somos</a>
+                <a class=verde1 href= "pages/valores.html">Valores</a>
+                <a class=amarillo1 href= "pages/Proyectos.html">Proyectos 2023</a>
+                <a class=naranja1 href= "pages/asamblea.html">Asambleas</a>
+                <a class=azul1 href= "pages/consejo.html">Consejo de Administración</a>
+            </nav>
+        </div>
+    </header>
 
-    <a href="../index.html">volver</a>   
+    <img src="../img/valores.jpeg" alt="" width="900">
+ <p><a href="../index.html">volver</a></p>   
+    <footer>
+        <div class="container">
+        <p>&copy; Cooperativa Escolar "El Progreso" 2023</p>
+        <a  href="https://www.instagram.com/coop.escolar.el.progreso/" target="_blank"><img src="img/instagram.webp" alt="" height="75"></a>
+        <a href="https://www.facebook.com/people/Cooperativa-Escolar-El-Progreso/100066414342905/"target="_blank"><img src="img/facebook.png" alt="" height="75"></a>
+        <a href="#" target="_blank"><img src="img/whatsapp .jpg" alt="" height="75"></a>
+    
+    </div>
+    </footer>
 </body>
 </html>
