--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coop-Virtual</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="shortcut icon" href="img/logo.jpeg" type="image/x-icon">
-    <!-- <style>
-        ul{display:inline;}
-    </style> -->
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="shortcut icon" href="../img/logo.jpeg" type="image/x-icon">
+    
 </head>
 <body>
     <header>
