--- a/pages/consejo.html
+++ b/pages/consejo.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consejo</title>
-    <link rel="shortcut icon" href="../img/Consejo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="shortcut icon" href="../img/logo.jpeg" type="image/x-icon">
+    
 </head>
 <body>
     <header>
        
         <div class="container">
-        <img src="img/banner.jpeg" alt="" height="" width="800">
+        <img src="../img/banner.jpeg" alt="" height="" width="800">
             <p class="logo">Coop-Virtual</p>
             <nav>
-                <a class=rojo1 href= "pages/departamentos.html">Departamentos</a>
-                <a class=violeta1 href= "pages/creacion.html">Quienes Somos</a>
-                <a class=verde1 href= "pages/valores.html">Valores</a>
-                <a class=amarillo1 href= "pages/Proyectos.html">Proyectos 2023</a>
-                <a class=naranja1 href= "pages/asamblea.html">Asambleas</a>
-                <a class=azul1 href= "pages/consejo.html">Consejo de Administración</a>
+                <a class=rojo1 href= "departamentos.html">Departamentos</a>
+                <a class=violeta1 href= "creacion.html">Quienes Somos</a>
+                <a class=verde1 href= "valores.html">Valores</a>
+                <a class=amarillo1 href= "Proyectos.html">Proyectos 2023</a>
+                <a class=naranja1 href= "asamblea.html">Asambleas</a>
+                <a class=azul1 href= "consejo.html">Consejo de Administración</a>
             </nav>
         </div>
     </header>
@@ -49,9 +51,9 @@
 <footer>
     <div class="container">
     <p>&copy; Cooperativa Escolar "El Progreso" 2023</p>
-    <a  href="https://www.instagram.com/coop.escolar.el.progreso/" target="_blank"><img src="img/instagram.webp" alt="" height="75"></a>
-    <a href="https://www.facebook.com/people/Cooperativa-Escolar-El-Progreso/100066414342905/"target="_blank"><img src="img/facebook.png" alt="" height="75"></a>
-    <a href="#" target="_blank"><img src="img/whatsapp .jpg" alt="" height="75"></a>
+    <a  href="https://www.instagram.com/coop.escolar.el.progreso/" target="_blank"><img src="../img/instagram.webp" alt="" height="75"></a>
+    <a href="https://www.facebook.com/people/Cooperativa-Escolar-El-Progreso/100066414342905/"target="_blank"><img src="../img/facebook.png" alt="" height="75"></a>
+    <a href="#" target="_blank"><img src="../img/whatsapp .jpg" alt="" height="75"></a>
 
 </div>
 </footer>
