--- a/pages/valores.html
+++ b/pages/valores.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valores</title>
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="shortcut icon" href="../img/logo.jpeg" type="image/x-icon">
+    
 </head>
 <body>
     <header>
@@ -12,12 +15,12 @@
         <img src="img/banner.jpeg" alt="" height="" width="800">
             <p class="logo">Coop-Virtual</p>
             <nav>
-                <a class=rojo1 href= "pages/departamentos.html">Departamentos</a>
-                <a class=violeta1 href= "pages/creacion.html">Quienes Somos</a>
-                <a class=verde1 href= "pages/valores.html">Valores</a>
-                <a class=amarillo1 href= "pages/Proyectos.html">Proyectos 2023</a>
-                <a class=naranja1 href= "pages/asamblea.html">Asambleas</a>
-                <a class=azul1 href= "pages/consejo.html">Consejo de Administración</a>
+                <a class=rojo1 href= "departamentos.html">Departamentos</a>
+                <a class=violeta1 href= "creacion.html">Quienes Somos</a>
+                <a class=verde1 href= "valores.html">Valores</a>
+                <a class=amarillo1 href= "Proyectos.html">Proyectos 2023</a>
+                <a class=naranja1 href= "asamblea.html">Asambleas</a>
+                <a class=azul1 href= "consejo.html">Consejo de Administración</a>
             </nav>
         </div>
     </header>
