--- a/pages/departamentos.html
+++ b/pages/departamentos.html
@@ -16,7 +16,7 @@
             <p class="logo">Coop-Virtual</p>
             <nav>
                 <a class=rojo1 href= "departamentos.html">Departamentos</a>
-                <a class=violeta1 href= creacion.html">Quienes Somos</a>
+                <a class=violeta1 href= "creacion.html">Quienes Somos</a>
                 <a class=verde1 href= "valores.html">Valores</a>
                 <a class=amarillo1 href= "Proyectos.html">Proyectos 2023</a>
                 <a class=naranja1 href= "asamblea.html">Asambleas</a>
