--- a/pages/asamblea.html
+++ b/pages/asamblea.html
@@ -26,8 +26,8 @@
     </header>
 
     <h1>Asambleas</h1>
-    Existen dos tipos de Asambleas las ordinarias y extraordinarias, estas son de carácter legal igual que las decisiones que
-    serán tomadas en ella.
+    <p>Existen dos tipos de Asambleas las ordinarias y extraordinarias, estas son de carácter legal igual que las decisiones que
+    serán tomadas en ella.</p>
     <p>Las asambleas deben convocarse con 15 dias de anticipación y para que estas sean celebradas debe encontrarse la mitad más uno de los asociados.
     <h2>Asamblea Ordinaria</h2>
         <p>La Asamblea Ordinaria se realiza una vez por año, dentro de los treinta días siguientes a la fecha de
