--- a/pages/Proyectos.html
+++ b/pages/Proyectos.html
@@ -27,19 +27,19 @@
 
     PROYECTOS  2023 
 
-<p>Depto. de Comunicación y Difusión: Se llevo a cabo un grupo de difusión en la plataforma Instagram con novedades sobre la cooperativa y diferentes departamentos. Y la realización de una página web en la que se informe sobre la Cooperativa en sus años anteriores y la actualidad (2023). </p>
+<p><span class="negrita">Depto. de Comunicación y Difusión:</span> Se llevo a cabo un grupo de difusión en la plataforma Instagram con novedades sobre la cooperativa y diferentes departamentos y la realización de esta página web en la que se informa sobre la Cooperativa en sus años anteriores y la actualidad (2023). <br>
+<br>
+<span class="negrita">Depto. de Deportes:</span> Realizaron torneos de fútbol y vóley en los meses de mayo y septiembre respectivamente, en el que todos los alumnos de la E.E.S N°3 "Mariano Moreno" podian inscribirse, siendo socios recibían el beneficio de inscripción gratuita y los no socios pagando un valor minimo. <br>
+<br>
+<span class="negrita">Depto. de Cultura:</span> En el mes de agosto se realizo una charla sobre los TCA con los profesionales de la salud Loana Bormida, Uriel Wilwert y Patricia Palacio, terminada con un buen recivimiento por todos los alumnos. Se encargaron, en el mes de julio, de la decoración para el Acto del 9 de Julio, y de pintar el "Cajón de sonido".<br>
+<br>
+<span class="negrita">Depto. de Asociados:</span>  En el mes de julio se llevo a cabo el Cinecoop, donde se proyecto la pelicula "Peter Pan & Wendy" y que contaba con kiosco. En Octubre iniciaron su proyecto con 5to año con el objetivo de informar a los alumnos como es el trabajo de un integrande activo de la cooperativa. <br>
+<br>
+<span class="negrita">Depto. de Administración:</span> Realizaron, en el mes de junio, una charla de concientización sobre el bullying con diferente estaciones con juegos para que los alumnos pudieran interactuar y participar. Luego en el mes de septiembre, para recivir la primavera, realizaron una jornada que contó con encuentros de vóley en el que participaban todos los alumnos de la institución. <br>
+<br>
+<span class="negrita">Depto. de Acción Social:</span> Se encargaron todo el año de realizar la impresión de fotocopias con su proyecto "Coop-ias Solidarias".Realizaron actividades de recreación para recibir el receso invernal. En Octubre se organizó un encuentro con los abuelos de el hogar de ancianos "Horacio Carlos Koock" junto a los alumnos del C.E.C N°802, para compartir una mañana pintando mandalas, jugando a el truco, hablando con ellos y tomando nota de recetas que ellos recordaran y nos compartieran para llevar a cabo un recetario con estas.</p>  
 
-<p>Depto. de Deportes: Realizaron torneos de futbol y voley en los meses de mayo y septiembre respectivamente, en el que todos los alumnos de la E.E.S N°3 "Mariano Moreno" podian inscribirse, siendo socios recibían el beneficio de inscripción gratuita y los no socios pagando un valor minimo.</p>
-
-<p>Depto. de Cultura: En el mes de agosto se realizo una charla sobre los TCA con los profesionales de la salud Loana Bormida, Uriel Wilwert y Patricia Palacio, terminada con un buen recivimiento por todos los alumnos. Pintaron el cajón de sonido. </p>
-
-<p>Depto. de Asociados: En el mes de julio se llevo a cabo el Cinecoop de la cooperativa abierto a la comunidad con kiosco incluido. En Octubre iniciaron su proyecto con 5to año con el objetivo de informar a los alumnos como es el trabajo de un integrande activo de la cooperativa. </p>
-
-<p>Depto. de Administración: Realizaron, en el mes de junio, una charla de concientización sobre el bullying con diferente estaciones con juegos para que los alumnos pudieran interactuar y participar.</p> 
-
-<p>Depto. de Acción Social: Realizaron actividades de recreación un día antes de las vacaciones de invierno y durante el año realizan copias solidarias para toda la institución con un precio mínimo o gratis si algún niño lo nesesita. En Octubre se organizó un encuentro con los abuelos de el hogar de ancianos "Horacio Carlos Koock" junto a los alumnos del C.E.C N°802, para compartir una mañana pintando mandalas, jugando a el truco, hablando con ellos y pedirles, si recordaban alguna receta, compartirnoslas para luego realizar un recetario.</p>  
-
- <p><a href="../index.html">volver</a></p>
+ <p><a href="../index.html"><button>Volver</a></button></p>
 
  <footer>
     <div class="container">
