--- a/pages/asamblea.html
+++ b/pages/asamblea.html
@@ -28,20 +28,18 @@
     <h1>Asambleas</h1>
     <p>Existen dos tipos de Asambleas las ordinarias y extraordinarias, estas son de carácter legal igual que las decisiones que
     serán tomadas en ella.</p>
-    <p>Las asambleas deben convocarse con 15 dias de anticipación y para que estas sean celebradas debe encontrarse la mitad más uno de los asociados.
+    <p>Las asambleas deben convocarse con 15 días de anticipación y para que estas sean celebradas debe encontrarse la mitad más uno de la cantidad total de los asociados.
     <h2>Asamblea Ordinaria</h2>
-        <p>La Asamblea Ordinaria se realiza una vez por año, dentro de los treinta días siguientes a la fecha de
-        cierre del ejercicio social y antes de la finalización del año lectivo. En estas se tratan los siguientes puntos: </p>
-        <p>Memoria, Balance General, Estado de Resultados y demás Cuadros Anexos, de realizar estos informes se encarga el Dpto. de Administración, Proyecto de Distribución de Excedentes e Informes del Sindico.</p>
-       <p>Se elije el nuevo Consejo de Administración, mediante el voto electronico. Para votar los asociados deben tener las cuotas al día y tienen un unico voto por asosiado.</p>
-       <p>Una vez presentes la mitad más uno del total de los asociados se da comienzo a la asamblea y al inicio de esta se designa a dos asosiados presentes para firmar el acta junto a el Presidente y el Secretario.</p>
+        <p>La Asamblea Ordinaria se realiza una vez por año, dentro de los treinta días siguientes a la fecha de cierre del ejercicio social y antes de la finalización del año lectivo. En estas se tratan los siguientes puntos: <br>
+    Memoria, Balance General, Estado de Resultados y demás Cuadros Anexos, de realizar estos informes se encarga el Dpto. de Administración, e Informes del Sindico.</p>
+       <p>Se elije el nuevo Consejo de Administración, mediante el voto electronico. Para votar los asociados deben tener las cuotas al día y tienen un unico voto por asosiado. <br>
+       Una vez presentes la mitad más uno del total de los asociados se da comienzo a la asamblea y al inicio de esta se designa a dos asosiados presentes para firmar el acta junto a el Presidente y el Secretario.</p>
        <h2>Asamblea Extrordinaria</h2>
-       <p>En este tipo de asamble se trata cualquier tema que inquiete a los asosiados. También cuando los Departamentos tienen problemas internos que entre sus integrantes o su jefe no pueden resolver se puede hablar e intentar resolver con el Consejo de Administración</p>
-       <p>Quien se encarga de saber que temas inquieta a los departamentos es el Secretario que escribirá estos y los comunicará cuando inicie la asamblea</p>
-       <h3>¿Quiénes convocan las Asamblea Extraordinarias?</h2>
-       <p>Estas pueden ser convocadas por el Consejo de Administración, Sindico, Comisión Asesora o los asosiados que superen juntos el 10% y la pidan por escrito.</p>
+       <p>En este tipo de asamble se trata cualquier tema que inquiete a los asosiados. También cuando los Departamentos tienen problemas internos que entre sus integrantes o su jefe no pueden resolver se puede hablar e intentar resolver estos con el Consejo de Administración. <br>Quien se encarga de saber que temas inquieta a los departamentos es el Secretario que tomará nota de estos y los comunicará cuando inicie la asamblea</p>
+       <h3>¿Quiénes  pueden convocar las Asambleas Extraordinarias?</h3>
+       <p>Estas pueden ser convocadas por el Consejo de Administración, Sindico, Comisión Asesora o los asosiados que superen juntos el 10%.</p>
       
-       <h2>Asamble 2018</h2>
+       <h2>Asamblea 2018</h2>
        <img src="../img/asamblea 2018.jpeg" alt="" width="780">
 
        <h2>Asamblea 2020</h2>
@@ -50,7 +48,7 @@
        <h2>Asamblea 2021</h2>
   <img src="../img/asamblea 2021.jpeg" alt="" width="780">
 
-  <p><a href="../index.html">volver</a></p>  
+  <p><a href="../index.html"><button>Volver</a></button></p>  
     </p>
     <footer>
         <div class="container">
