--- a/pages/valores.html
+++ b/pages/valores.html
@@ -26,7 +26,7 @@
     </header>
 
     <img src="../img/valores.jpeg" alt="" width="900">
- <p><a href="../index.html">volver</a></p>   
+ <p><a href="../index.html"><button>Volver</a></button></p>   
     <footer>
         <div class="container">
         <p>&copy; Cooperativa Escolar "El Progreso" 2023</p>
