--- a/pages/consejo.html
+++ b/pages/consejo.html
@@ -26,27 +26,26 @@
     </header>
 
     <h1>Consejo de Administración</h1>
-    <p>La Cooperativa está dirigida por el Consejo de Administración. Sus miembros son elegidos en la Asamblea mediante el voto virtual y secreto
-    de los asociados. El escrutinio se hará inmediatamente después del acto eleccionario y se proclamará
-    a los candidatos que hubieren obtenido mayoría de votos.</p>
-    <p>Se distribuirán en la primera sesión del Consejo de Administración
-        los siguientes cargos: un Presidente, un Vicepresidente, un Secretario, un Tesorero, un Síndico, un
-        Síndico suplente, Tres vocales y tres vocales suplentes.</p>
-        <p>El Consejo y sus integrantes deben cumplir con deberes y obligaciones que se encuentran explicadas en el <a href="../img/Estatuto Cooperativa .pdf" target="_blank">Estatuto</a></p>
+
+    <p>La Cooperativa está dirigida por el Consejo de Administración. Sus miembros son elegidos en la Asamblea mediante el voto virtual y secreto de los asociados. El escrutinio se hará inmediatamente después del acto eleccionario y se proclamará
+    a los candidatos que hubieren obtenido mayoría de votos. <br>
+    Se distribuirán en la primera sesión del Consejo de Administración los siguientes cargos: un Presidente, un Vicepresidente, un Secretario, un Tesorero, un Síndico, un Síndico suplente, Tres vocales y Tres vocales suplentes. <br>
+    El Consejo y sus integrantes deben cumplir con deberes y obligaciones que se encuentran explicadas en el <a href="../img/Estatuto Cooperativa .pdf" target="_blank">Estatuto.</a></p>
+
  <h2>Integrantes del Consejo de Administracion 2023:</h2> 
 <p>1) <span class="negrita">PRESIDENTE: </span> Retegui, Marco</p>
 <p>2) <span class="negrita">VICEPRESIDENTE: </span> Alvarez, Maite</p>
 <p>3) <span class="negrita">SECRETARIA:</span> Montangie, Candelaria</p>
 <p>4) <span class="negrita">TESORERA:</span> Villarroel, Celeste</p>
 <p>5) <span class="negrita">VOCAL I:</span> López Villar, Morena </p>
-<p>6) <span class="negrita">VOCAL II: </span>Ramirez, Tomas</p>
+<p>6) <span class="negrita">VOCAL II: </span>Ramírez, Tomás</p>
 <p>7) <span class="negrita">VOCAL III: </span>Echeverri, Tyara</p>
-<p>8)<span class="negrita"> VOCAL SUPLENTE IV:</span> Delgue, Tatiana </p>
-<p>9) <span class="negrita">VOCAL SUPLENTE V: </span>Borges, Pia</p>
+<p>8)<span class="negrita"> VOCAL IV:</span> Delgue, Tatiana </p>
+<p>9) <span class="negrita">VOCAL V: </span>Borges, Pía</p>
 <p>10) <span class="negrita">SINDICO:</span> Castellano, Abigail</p>
 <p>11)<span class="negrita"> SINDICO SUPLENTE: </span></p>
 
-<a href="../index.html">volver</a>
+<a href="../index.html"><button>Volver</button></a>
 
 <footer>
     <div class="container">
